add policy get, post, retrieve, destroy endpoints; password get endpoint
