# src/openapi/passwords_manager.openapi.yaml
@@ -2,8 +2,6 @@ openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Passwords Manager
-  license:
-    name: MIT
 servers:
   - url: http://localhost:5000/api/v1
 paths:
@@ -60,17 +58,58 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /password/{policy_hash}:
+  /policy/{name}:
     get:
-      summary: One password by policy
+      summary: Get policy by Policy name
+      operationId: handlers.policy.retrieve_policy
+      tags:
+        - policy
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: The name of the policy to retrieve
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Policy"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    delete:
+      summary: Destroy policy by Policy name
+      operationId: handlers.policy.destroy_policy
+      tags:
+        - policy
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: The name of the policy to destroy
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Successfully destroy
+  /password/{policy_name}:
+    get:
+      summary: create password by policy
       operationId: handlers.password.get_password
       tags:
         - password
       parameters:
-        - name: policy_hash
+        - name: policy_name
           in: path
           required: true
-          description: The id of the pet to retrieve
+          description: The name of the policy
           schema:
             type: string
       responses:
@@ -98,21 +137,19 @@ components:
     Policy:
       type: object
       required:
-        - id
         - name
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
+        password_length:
+          type: integer
         symbols:
           type: string
         numbers:
           type: string
-        letters:
+        vowels:
           type: string
-        tag:
+        consonants:
           type: string
     Policies:
       type: array
